--- a/css/login.css
+++ b/css/login.css
@@ -64,10 +64,15 @@ form input:nth-of-type(1) {
 }
 
 form input:nth-of-type(2) {
-  margin-bottom: 36px;
+  margin-bottom: 18px;
+}
+
+.error__message {
+  color: #EB5757;
 }
 
 form button {
+  margin-top: 18px;
   background-color: #21bf48;
   line-height: 22px;
   padding: 19px 0;
