--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,15 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'SpoqaHanSansNeo-Regular';
-  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Regular.woff') format('woff');
+  font-family: "SpoqaHanSansNeo-Regular";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Regular.woff")
+    format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 :root {
-  font-family: 'SpoqaHanSansNeo-Regular';
+  font-family: "SpoqaHanSansNeo-Regular";
 }
 
 .inner {
@@ -21,7 +22,7 @@
   margin: 0 auto;
 }
 
-.hidden {
+.tag__hidden {
   width: 0;
   height: 0;
   line-height: 0;
@@ -33,4 +34,36 @@
   z-index: -100;
   font-size: 0;
   overflow: hidden;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+  margin: 0;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.nav__list > li:hover::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 100%;
+  width: 100%;
+  height: 20px;
+  z-index: 0;
+}
+
+.nav__list > li ul::before {
+  content: "";
+  position: absolute;
+  left: 50%; top: -10px;
+  width: 30px;
+  height: 30px;
+  background: url("/openMarket/images/polygon.svg") no-repeat center top;
+  transform: translateX(-50%);
+  z-index: 0;
 }
