--- a/css/sign.css
+++ b/css/sign.css
@@ -16,18 +16,19 @@
       border: 1px solid #c4c4c4;
     }
     button.active {
+      position: relative;
       background-color: white;
     }
   }
-  li:has(.active)::after {
+  button.active::after {
     content: "";
     display: block;
     position: absolute;
-    width: calc(100% - 2px);
+    width: 100%;
     height: 10px;
     background-color: white;
-    z-index: 1;
-    left: 1px;
+    z-index: 2;
+    left: 0;
     bottom: 15px;
   }
 }
@@ -64,10 +65,6 @@
 
 .user__section .login__input:nth-of-type(2) {
   margin-bottom: 18px;
-}
-
-.error__message {
-  color: #EB5757;
 }
 
 .user__form .btn {
@@ -107,29 +104,30 @@
   color: #767676;
 }
 
-.join__input, .id__check__btn {
+.join__input,
+.id__check__btn,
+.busness__number__check__btn {
   border-radius: 5px;
   line-height: 20px;
-  
 }
 
 .join__input {
   width: 100%;
   padding: 16px 15px;
-  border: 1px solid #C4C4C4;
+  border: 1px solid #c4c4c4;
   outline: none;
 }
 
 .join__input:active,
 .join__input:focus {
-  border: 1px solid #21BF48;
+  border: 1px solid #21bf48;
 }
 
-.id__check__btn {
+.id__check__btn,
+.busness__number__check__btn {
   padding: 17px 31px;
   color: white;
 }
 
 .select__wrap {
-
 }
