--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@
   font-family: "SpoqaHanSansNeo-Regular";
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .inner {
   max-width: 1340px;
   width: 100%;
@@ -47,7 +51,19 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-.nav__list > li:hover::after {
+#app {
+  padding-top: 90px;
+}
+
+#header {
+  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  width: 100%;
+  left: 0; top: 0;
+  z-index: 1000;
+}
+
+.nav__list > .nav__list__item:has(.myPage):hover::after {
   content: "";
   position: absolute;
   left: 0;
@@ -67,3 +83,26 @@ input::-webkit-inner-spin-button {
   transform: translateX(-50%);
   z-index: 0;
 }
+
+.nav__list__item.seller {
+  background-image: url('/openMarket/images/icon-shopping-bag.svg')
+}
+
+.nav__list__item:has(.myPage),
+.nav__list__item:has(.login) {
+  background-image: url('/openMarket/images/icon-user.svg')
+}
+
+.nav__list__item:has(.cart) {
+  background-image: url('/openMarket/images/icon-shopping-cart.svg')
+}
+
+.nav__list__item:has(.login):hover,
+.nav__list__item:has(.myPage):hover {
+  background-image: url('/openMarket/images/icon-user-2.svg')
+}
+
+.nav__list__item:has(.cart):hover {
+  background-image: url('/openMarket/images/icon-shopping-cart-2.svg')
+}
+
