--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,32 @@
   font-family: "SpoqaHanSansNeo-Regular";
   src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Regular.woff")
     format("woff");
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
+}
+
+@font-face {
+  font-family: "SpoqaHanSansNeo-Medium";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Medium.woff")
+    format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SpoqaHanSansNeo-Bold";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Bold.woff")
+    format("woff");
+  font-weight: 700;
+  font-style: normal;
+}
+
+.sans-medium {
+  font-family: "SpoqaHanSansNeo-Medium";
+}
+
+.sans-bold {
+  font-family: "SpoqaHanSansNeo-Bold";
 }
 
 :root {
