장바구니 수정

--- a/css/cart.css
+++ b/css/cart.css
@@ -32,6 +32,7 @@ tfoot div:has(.parcel__price)::before {
     display: block;
     width: 30px; height: 30px;
     position: relative;
+    cursor: pointer;
 }
 .cart__item__label::before,
 .cart__item__label::after {
