--- a/css/join.css
+++ b/css/join.css
@@ -145,10 +145,10 @@ label:has(#userPassword-check.error)::after {
   width: 0;
   height: 0;
 }
-.join__checkbox p {
+.join__checkbox span {
   color: #767676;
 }
-.join__checkbox p {
+.join__checkbox span {
   padding-left: 26px;
   position: relative;
   text-align: left;
@@ -158,7 +158,7 @@ label:has(#userPassword-check.error)::after {
   user-select: none;
 }
 
-.join__checkbox p::before {
+.join__checkbox span::before {
   content: "";
   position: absolute;
   left: 0;
@@ -173,10 +173,10 @@ label:has(#userPassword-check.error)::after {
   font-weight: 700;
 }
 
-.join__checkbox input[type="checkbox"]:checked + p {
+.join__checkbox input[type="checkbox"]:checked + span {
   color: #222;
 }
-.join__checkbox input[type="checkbox"]:checked + p::before {
+.join__checkbox input[type="checkbox"]:checked + span::before {
   background: url("/openMarket/images/check-fill-box.svg");
 }
 
